--- a/index.html
+++ b/index.html
@@ -332,11 +332,11 @@
       }
 
       .pos-main {
-        grid-template-columns: auto minmax(0, 1fr) minmax(0, 420px);
+        grid-template-columns: auto minmax(0, 1fr) minmax(0, 360px);
         align-items: stretch;
       }
 
-      @media (max-width: 1100px) {
+      @media (max-width: 980px) {
         .pos-main {
           grid-template-columns: auto minmax(0, 1fr);
         }
@@ -346,9 +346,9 @@
       }
 
       .pos-sidebar {
-        width: max-content;
-        min-width: 180px;
-        max-width: 240px;
+        width: clamp(150px, 18vw, 210px);
+        min-width: 150px;
+        max-width: 210px;
         align-self: start;
         border-radius: var(--radius-lg);
         padding: 18px 14px;
@@ -394,13 +394,15 @@
       .pos-sidebar-pill {
         border-radius: 999px;
         border: 1px solid rgba(255, 255, 255, 0.16);
-        padding: 9px 14px;
-        font-size: 13px;
+        padding: 8px 12px;
+        font-size: 12px;
         font-weight: 700;
         background: rgba(255, 255, 255, 0.08);
         color: rgba(255, 255, 255, 0.92);
         cursor: pointer;
-        text-align: left;
+        text-align: start;
+        white-space: normal;
+        word-break: break-word;
         transition: transform 0.16s ease-out, box-shadow 0.16s ease-out;
       }
 
@@ -475,12 +477,19 @@
         flex-direction: column;
       }
 
+      .panel.pos-cart-panel {
+        padding: 14px 14px 16px;
+      }
+
       .pos-cart-empty {
-        flex: 1;
-        display: grid;
-        place-items: center;
-        color: #9ca3af;
-        font-size: 14px;
+        margin: 6px 0 2px;
+        padding: 8px 10px;
+        border-radius: 12px;
+        border: 1px solid rgba(148, 163, 184, 0.35);
+        background: rgba(148, 163, 184, 0.10);
+        color: #6b7280;
+        font-size: 13px;
+        text-align: center;
       }
 
       .pos-cart-footer {
@@ -1816,6 +1825,7 @@ const DICTIONARY = {
           catHot: "Boissons Chaudes",
           catCold: "Boissons Froides",
           catOthers: "Autres",
+          posSlogan: "Pause marocaine, café d'exception.",
           currentOrder: "Commande en cours",
           cartEmpty: "Le panier est vide.",
           subtotal: "Sous-total",
@@ -1959,6 +1969,7 @@ const DICTIONARY = {
           catHot: "مشروبات ساخنة",
           catCold: "مشروبات باردة",
           catOthers: "أخرى",
+          posSlogan: "استراحة مغربية... قهوة أصيلة.",
           currentOrder: "الطلب الحالي",
           cartEmpty: "السلة فارغة",
           subtotal: "المجموع الفرعي",
@@ -10452,7 +10463,7 @@ const DICTIONARY = {
                     "div",
                     null,
                     e("div", { className: "pos-sidebar-title" }, "Café Halab POS"),
-                    e("div", { className: "pos-sidebar-sub" }, "")
+                    e("div", { className: "pos-sidebar-sub" }, t.posSlogan || "")
                   )
                 )
               ),
@@ -10719,15 +10730,20 @@ const DICTIONARY = {
                     e(
                       "div",
                       { className: "pos-sidebar-sub" },
-                      (t.waiterLabel || "Serveur") +
-                        ": " +
-                        String((activeWorker && activeWorker.name) || "")
+                      t.posSlogan || ""
                     )
                   )
                 ),
                 e(
                   "div",
                   { className: "pos-sidebar-block" },
+                  e(
+                    "div",
+                    { className: "pos-sidebar-muted" },
+                    (t.waiterLabel || "Serveur") +
+                      ": " +
+                      String((activeWorker && activeWorker.name) || "")
+                  ),
                   e(
                     "div",
                     { className: "pos-sidebar-muted" },
@@ -11008,38 +11024,40 @@ const DICTIONARY = {
                         )
                       )
                     ),
-                e(
-                  "div",
-                  { style: { marginTop: 8 } },
+                cart.length > 0 &&
                   e(
                     "div",
-                    { className: "summary-row" },
-                    e("span", null, t.subtotal),
-                    e("span", null, `${totals.subtotal.toFixed(2)} DHS`)
+                    { style: { marginTop: 8 } },
+                    e(
+                      "div",
+                      { className: "summary-row" },
+                      e("span", null, t.subtotal),
+                      e("span", null, `${totals.subtotal.toFixed(2)} DHS`)
+                    ),
+                    e(
+                      "div",
+                      { className: "summary-row" },
+                      e("span", null, t.tax),
+                      e("span", null, `${totals.tax.toFixed(2)} DHS`)
+                    ),
+                    e(
+                      "div",
+                      { className: "summary-row total" },
+                      e("span", null, t.total),
+                      e("span", null, `${totals.total.toFixed(2)} DHS`)
+                    )
                   ),
+                cart.length > 0 &&
                   e(
-                    "div",
-                    { className: "summary-row" },
-                    e("span", null, t.tax),
-                    e("span", null, `${totals.tax.toFixed(2)} DHS`)
+                    "button",
+                    {
+                      className: "btn-primary",
+                      style: { marginTop: 10, width: "100%" },
+                      disabled: submitting,
+                      onClick: handleSubmitOrder
+                    },
+                    submitting ? t.placingOrder : "Encaisser"
                   ),
-                  e(
-                    "div",
-                    { className: "summary-row total" },
-                    e("span", null, t.total),
-                    e("span", null, `${totals.total.toFixed(2)} DHS`)
-                  )
-                ),
-                e(
-                  "button",
-                  {
-                    className: "btn-primary",
-                    style: { marginTop: 10, width: "100%" },
-                    disabled: submitting || !cart.length,
-                    onClick: handleSubmitOrder
-                  },
-                  submitting ? t.placingOrder : "Encaisser"
-                ),
                 status &&
                   e(
                     "div",
